--- a/source/less/blocks/how-it-is-work.less
+++ b/source/less/blocks/how-it-is-work.less
@@ -1,4 +1,4 @@
-@import url("variables.less");
+@import "../variables.less";
 
 .how-it-is-work__green {
   margin-right: 21px;
@@ -107,7 +107,7 @@
 
   .how-it-is-work__sub-text-first-child {
     max-width: 203px;
-    margin-top: 33px;
+    margin-top: 31px;
   }
 
   .how-it-is-work__sub-text-second-child {
