--- a/source/less/blocks/programs.less
+++ b/source/less/blocks/programs.less
@@ -1,4 +1,4 @@
-@import url("variables.less");
+@import "../variables.less";
 
 .programs__program {
   background-color: #f2f2f2;
@@ -199,12 +199,6 @@
     margin-left: 31px;
   }
 
-  .icon-right-arrow-verylong {
-    height: 11px;
-    width: 24px;
-    margin-left: 15px;
-  }
-
   .programs__program-content-last-child {
     max-width: 341px;
   }
@@ -227,8 +221,12 @@
   }
 
   .programs__program-link-catalog-slim {
-    padding-top: 33px;
+    padding-top: 35px;
     padding-left: 2px;
+  }
+
+  .programs__name {
+    margin-top: 6px;
   }
 
   .programs__header-program-puma {
@@ -244,12 +242,16 @@
   }
 
   .programs__program-link-catalog-pro {
-    padding-top: 32px;
+    padding-top: 35px;
     padding-left: 2px;
   }
 
   .programs__icon-right-arrow-long {
     margin-left: 12px;
+  }
+
+  .programs__program-main-content-link {
+     border-top:0;
   }
 }
 
