--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -1,15 +1,16 @@
-@import url("variables.less");
+
+@import "../variables.less";
 
 @font-face {
   font-family: "Oswald-Medium";
   /* Имя шрифта */
-  src: url("../fonts/oswaldmedium.woff") format("woff"), url("../fonts/oswaldmedium.woff2") format("woff2");
+  src: url("../fonts/oswaldmedium.woff2") format("woff2"), url("../fonts/oswaldmedium.woff") format("woff");
 }
 
 @font-face {
   font-family: "Oswald-Regular";
   /* Имя шрифта */
-  src: url("../fonts/oswaldregular.woff") format("woff"), url("../fonts/oswaldregular.woff2") format("woff2");
+  src: url("../fonts/oswaldregular.woff2") format("woff2"), url("../fonts/oswaldregular.woff") format("woff");
 }
 
 * {
