--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -5,5 +5,6 @@
 @retina-dpi: 144dpi;
 @retina-dppx: 1.5dppx;
 @white: #fff;
-@desktop-adaptive:1440px;
+@desktop-custom-new: 1300px;
+@desktop-adaptive: 1440px;
 @desktopBig: 1440px;
