finish finish sinish

--- a/source/less/blocks/additional-goods.less
+++ b/source/less/blocks/additional-goods.less
@@ -140,6 +140,10 @@
     width: 17.3%;
     margin-top: 7px;
   }
+
+  .additional-goods__gift-image {
+    margin-bottom: 61px;
+  }
 }
 
 @media (min-width: @tablet) {
@@ -538,6 +542,10 @@
 
   .additional-goods {
     overflow: hidden;
+  }
+
+  .additional-goods__header-sub-span::before {
+    left: -300%;
   }
 }
 
