--- a/source/less/blocks/footer.less
+++ b/source/less/blocks/footer.less
@@ -44,7 +44,7 @@
   align-items: center;
   max-width: 100%;
   margin: 0 auto;
-  padding-top: 32px;
+  padding-top: 34px;
 }
 
 .footer__logo {
@@ -89,6 +89,10 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+  }
+
+  .footer__right-logo-catalog {
+    padding-top: 19px;
   }
 
   .footer__social-links-li-facebook-catalog {
@@ -386,6 +390,6 @@
   }
 
   .footer__index-new {
-    padding-top: 36px;
+    padding-top: 41px;
   }
 }
