--- a/source/less/blocks/live-example.less
+++ b/source/less/blocks/live-example.less
@@ -153,10 +153,11 @@
 
   .live-example__sub {
     font-size: 14px;
-    line-height: 17px;
+    line-height: 18px;
     font-family: "Arial", "Tahoma", sans-serif;
     color: #444444;
     margin-bottom: 26px;
+    max-width: 267px;
   }
 
   .live-example__numbers-sub:last-child {
@@ -187,7 +188,7 @@
   }
 
   .live-example__numbers-plus-price {
-    margin-top: 24px;
+    margin-top: -3px;
   }
 
   .live-example__price {
@@ -247,14 +248,14 @@
   }
 
   .live-example {
-    max-width: 768px;
+    max-width: 100%;
     margin: 0 auto;
     background-color: inherit;
     border-top: 1px solid #e6e6e6;
   }
 
   .live-example__content {
-    max-width: 768px;
+    max-width: 100%;
   }
 
   .live-example__header {
@@ -277,6 +278,7 @@
     line-height: 24px;
     margin-bottom: 53px;
     margin-left: -1px;
+    max-width: 100%;
   }
 
   .live-example__numbers {
@@ -371,7 +373,7 @@
     margin-top: 232px;
     position: relative;
     background-color: #f2f2f2;
-    max-width: 768px;
+    max-width: 100%;
     padding-bottom: 20px;
   }
 
@@ -391,9 +393,9 @@
 
   .live-example__slider-controls {
     max-width: 569px;
-    margin-top: 53px;
-    margin-left: 100px;
-    margin-bottom: 48px;
+    padding-top: 52px;
+    padding-bottom: 47px;
+    margin: 0 auto;
   }
 
   .live-example__slider-on-off-content-image {
@@ -569,7 +571,7 @@
     justify-content: space-between;
     display: flex;
     flex-direction: row;
-    margin-top: 28px;
+    margin-top: 30px;
     padding-left: 0;
     margin-left: 0;
     padding-bottom: 50px;
@@ -623,9 +625,9 @@
 
   .live-example__slider-controls {
     max-width: 569px;
-    margin-top: -221px;
+    margin-top: -273px;
     margin-left: 44%;
-    margin-bottom: 48px;
+    margin-bottom: -1px;
   }
 
   .live-example__slider-button {
@@ -686,7 +688,7 @@
   }
 
   .live-example__numbers-sub-header-five-kg {
-    margin-bottom: 12px;
+    margin-bottom: 9px;
     margin-top: 9px;
     margin-left: -12px;
     width: 109px;
@@ -714,8 +716,8 @@
   }
 }
 
-@media (min-width: 1441px){
-.live-example__content {
+@media (min-width: 1441px) {
+  .live-example__content {
     max-width: 100%;
   }
 
