--- a/source/less/blocks/main-form.less
+++ b/source/less/blocks/main-form.less
@@ -8,7 +8,7 @@
   padding-left: 18px;
 }
 
-.form {
+.main-form__form {
   overflow: hidden;
 }
 
@@ -464,15 +464,12 @@
   }
 
   .main-form__sub-input-age {
-    padding-top: 12px;
-    padding-left: 15px;
-    padding-right: 15px;
-    padding-bottom: 15px;
+    padding: 12px 15px 13px 15px;
     border: 1px solid #e6e6e6;
     max-width: 70%;
     width: 140px;
     font-size: 14px;
-    line-height: 16.1px;
+    line-height: 18px;
   }
 
   .main-form__contact-inputs {
@@ -546,11 +543,6 @@
     margin-left: 16px;
     padding-left: 30px;
     margin-top: 6.2px;
-  }
-
-  .main-form__sub-input-age {
-    font-size: 14px;
-    line-height: 16.1px;
   }
 }
 
@@ -633,15 +625,13 @@
   }
 
   .main-form__sub-input-age {
-    padding-top: 14px;
-    padding-left: 19px;
-    padding-right: 21px;
-    padding-bottom: 13px;
+    padding: 10px 21px 10px 19px;
     border: 1px solid #e6e6e6;
     margin-top: -8px;
     width: 620px;
     max-width: 72%;
-    line-height: 23px;
+    line-height: 20px;
+    font-size: 20px;
   }
 
   .main-form__contact-inputs {
@@ -1112,13 +1102,12 @@
 
   .main-form__sub-input-age {
     padding-right: 0;
-    padding-bottom: 7px;
-    max-width: 414px;
+    max-width: 418px;
     width: 437px;
     font-size: 20px;
-    padding-top: 12px;
     margin-top: -6px;
     line-height: 20px;
+    padding: 14px 0 7px 15px;
   }
 
   .main-form__radio-part {
@@ -1374,7 +1363,7 @@
   }
 
   .main-form__commentary {
-    margin-top: 37px;
+    margin-top: 35px;
     position: relative;
   }
 
@@ -1383,7 +1372,15 @@
   }
 
   .main-form__contact-data-for-cat-owner::before {
-    left: -555px;
+    left: -231%;
+  }
+
+  .main-form__commentary-comment::before {
+    left: -378%;
+  }
+
+  .main-form__sub-add::before {
+    left: -450%;
   }
 }
 
