--- a/source/less/blocks/main-index.less
+++ b/source/less/blocks/main-index.less
@@ -1,21 +1,21 @@
 @import "../variables.less";
 
 @media (min-width: @mobile) {
-  .main {
+  .main-index {
     max-width: 320px;
     margin: 0 auto;
   }
 }
 
 @media (min-width: @tablet) {
-  .main {
+  .main-index {
     max-width: 768px;
     margin: 0 auto;
   }
 }
 
 @media (min-width: @desktop) {
-  .main {
+  .main-index {
     max-width: 1220px;
     margin: 0 auto;
   }
