--- a/source/less/blocks/main-form.less
+++ b/source/less/blocks/main-form.less
@@ -470,6 +470,9 @@
     width: 140px;
     font-size: 14px;
     line-height: 18px;
+    font-size: 16px;
+    line-height: 18px;
+    font-family: "Oswald-Regular","Arial",sans-serif;
   }
 
   .main-form__contact-inputs {
@@ -588,7 +591,7 @@
 
   .main-form__sub-label-input-name {
     font-size: 20px;
-    line-height: 18px;
+    line-height: 20px;
     font-family: "Oswald-Regular", "Arial", sans-serif;
     border: 1px solid #e6e6e6;
     padding: 9px 17px 11px 17px;
